@@ -1,3 +1,7 @@
+  12 September 2012
+Updated u2l and l2u with data from UnicodeData.txt 2011-11-08
+(using script uni.bra)
+
    4 August 2012
 Removed function "?"$<expr>. The same effect is obtained by <expr>:?!(=)
 
